Fixed Background Color and Alignment of Signup

--- a/main.css
+++ b/main.css
@@ -12,7 +12,8 @@
 
 body {
   /* background: #02578c; */
-  background: #eee;
+  /* background: #eee; */
+  background: white;
   color: var(--purple);
 
   font-family: system, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -57,7 +58,7 @@ body {
   text-align: center;
   width: 300px;
   min-height: 200px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   /* box-shadow: 0 10px 50px 0 #ccc; */
   margin-bottom: 1rem;
 }
